killed logo margins at 768 to fix about undershift

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ a:hover{
   width:13%;
   padding-left: 0;
   padding-right: 0;
-  margin: 0 7% 0 0;
+  margin: 0 6% 0 0;
 }
 }
 @media screen and (max-width:768px) {
